--- a/dna-rankings/package.json
+++ b/dna-rankings/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^13.5.0",
     "papaparse": "^5.4.1",
     "react": "^18.3.1",
+    "react-csv-reader": "^4.0.0",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
     "react-table": "^7.8.0",
